Added brand colours to CSS and styled text more in depth
-uppercase headers
-brand colours
-font-family

--- a/type-guide.html
+++ b/type-guide.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-ca">
 <head>
-	<link href='http://fonts.googleapis.com/css?family=Rochester: 400|PT+Sans:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
   <meta charset="utf-8">
   <title>Ecommerce Typography Styleguide</title>
   <link href="css/typography.css" rel="stylesheet">
@@ -21,8 +21,7 @@
 <div class="banner">
 	<h2 class="yotta">Ecommerce Typography Styles</h2>
 </div>
-	
-<p class=" giga brand-color">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. </p>
+	<p class=" giga brand-color">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. </p>
 
 <h1>Heading Level 1<a href="#">Linked</a></h1>
 
