Made 3 styles of buttons with 3 styles each

--- a/styleguide/buttons.html
+++ b/styleguide/buttons.html
@@ -13,14 +13,20 @@
 </head>
 
 <h1> Buttons </h1>
+<h2> Baby boy</h2>
+<a class="btn-boy micro" href="#">Click Here!</a>
+<a class="btn-boy" href="#">Click Here!</a>
+<a class="btn-boy yotta" href="#">Click Here!</a>
 
-<a class="btn" href="#">Click Here!</a>
-<a class="btn giga" href="#">Click Here!</a>
-<a class="btn micro" href="#">Click Here!</a>
-<a class="btn mega brand-family" href="#">Click Here!</a>
+<h2>Baby girl</h2>
+<a class="btn-girl micro" href="#">Click Here!</a>
+<a class="btn-girl" href="#">Click Here!</a>
+<a class="btn-girl yotta" href="#">Click Here!</a>
 
-<a class="btn btn-alt" href="#">Click Here!</a>
-<a class="btn btn-alt yotta" href="#">Click Here!</a>
+<h2> Neutral</h2>
+<a class="btn-grey micro" href="#">Click Here!</a>
+<a class="btn-grey" href="#">Click Here!</a>
+<a class="btn-grey yotta" href="#">Click Here!</a>
 
 
 
