--- a/styleguide/list-group.html
+++ b/styleguide/list-group.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>List Group</title>
 	<link href="../css/list-group.css" rel="stylesheet">
-	<link href="http://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
+	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
 	<link href="../css/typography.css" rel="stylesheet">
 	<link href="../css/buttons.css" rel="stylesheet">
 	<link href="../css/media-object.css" rel="stylesheet">
