--- a/styleguide/product.html
+++ b/styleguide/product.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Product List Item</title>
-	<link href="http://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
+	<link href="http://fonts.googleapis.com/	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+ss?family=Patua+One" rel="stylesheet">
 	<link href="../css/typography.css" rel="stylesheet">
 	<link href="../css/list-group.css" rel="stylesheet">
 	<link href="../css/buttons.css" rel="stylesheet">
