--- a/styleguide/media-object.html
+++ b/styleguide/media-object.html
@@ -3,11 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <title>Media Object</title>
-<link href="../css/list-group.css" rel="stylesheet">
-<link href="http://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
-<link href="../css/typography.css" rel="stylesheet">
-<link href="../css/buttons.css" rel="stylesheet">
-<link href="../css/media-object.css" rel="stylesheet">
+	<link href="../css/list-group.css" rel="stylesheet">
+	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+	<link href="../css/typography.css" rel="stylesheet">
+	<link href="../css/buttons.css" rel="stylesheet">
+	<link href="../css/media-object.css" rel="stylesheet">
+	<link href="../css/promos.css" rel="stylesheet">
+	<link href="../css/forms.css" rel="stylesheet">
 </head>
 
 <body>
