--- a/styleguide/typography.html
+++ b/styleguide/typography.html
@@ -3,7 +3,7 @@
 <head>
  <meta charset="utf-8">
  <title>Typography Styleguide</title>
-	  <link href="http://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
+	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
 	  <link href="../css/typography.css" rel="stylesheet">
 	  <link href="../css/buttons.css" rel="stylesheet">
 	  <link href="../css/media-object.css" rel="stylesheet">
