--- a/type-guide.html
+++ b/type-guide.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-ca">
 <head>
+<meta charset="utf-8">
+<title>Ecommerce Typography Styleguide</title>
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
-  <meta charset="utf-8">
-  <title>Ecommerce Typography Styleguide</title>
-  <link href="css/typography.css" rel="stylesheet">
+	<link href="css/typography.css" rel="stylesheet">
+	<link href="../css/buttons.css" rel="stylesheet">
+	<link href="../css/media-object.css" rel="stylesheet">
+	<link href="../css/list-group.css" rel="stylesheet">
+	<link href="../css/product.css" rel="stylesheet">
+	<link href="../css/promos.css" rel="stylesheet">
+	<link href="../css/forms.css" rel="stylesheet">
   <style>
   
     /* Do not add CSS here -- this is just for controlling the line length */
