--- a/styleguide/buttons.html
+++ b/styleguide/buttons.html
@@ -4,8 +4,9 @@
 <meta charset="UTF-8">
 <title>Buttons</title>
 	<link href="../css/list-group.css" rel="stylesheet">
-	<link href="http://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
+	<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,200,300,700' rel='stylesheet' type='text/css'>		
 	<link href="../css/typography.css" rel="stylesheet">
+	<link href="../css/product-list.css" rel="stylesheet">
 	<link href="../css/buttons.css" rel="stylesheet">
 	<link href="../css/media-object.css" rel="stylesheet">
 	<link href="../css/promos.css" rel="stylesheet">
