--- a/styleguide/list-group.html
+++ b/styleguide/list-group.html
@@ -4,8 +4,9 @@
 <meta charset="UTF-8">
 <title>List Group</title>
 	<link href="../css/list-group.css" rel="stylesheet">
-	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,200,300,700' rel='stylesheet' type='text/css'>	
 	<link href="../css/typography.css" rel="stylesheet">
+	<link href="../css/product-list.css" rel="stylesheet">
 	<link href="../css/buttons.css" rel="stylesheet">
 	<link href="../css/media-object.css" rel="stylesheet">
  	<link href="../css/promos.css" rel="stylesheet">
