--- a/styleguide/product-list-item.html
+++ b/styleguide/product-list-item.html
@@ -3,49 +3,52 @@
 <head>
 <meta charset="UTF-8">
 <title>Product List Item</title>
-	<link href="http://fonts.googleapis.com/	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
-ss?family=Patua+One" rel="stylesheet">
+	<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,200,300,700' rel='stylesheet' type='text/css'>	
 	<link href="../css/typography.css" rel="stylesheet">
 	<link href="../css/list-group.css" rel="stylesheet">
 	<link href="../css/buttons.css" rel="stylesheet">
 	<link href="../css/media-object.css" rel="stylesheet">
-	<link href="../css/product.css" rel="stylesheet">
+	<link href="../css/product-list.css" rel="stylesheet">
 	<link href="../css/promos.css" rel="stylesheet">
 	<link href="../css/forms.css" rel="stylesheet">
 
 </head>
 <body>
+<body>
 
+<ul class=list-group>
+
+<li class="list-group-item-inline">
 <div class="product">
 
 <div class="media">
 	<div class="media-img media-img-stacked">
-		<img class="img-flex" src="http://placehold.it/640x400" alt="">
+		<img class="img-flex" src="http://placehold.it/175x215" alt="">
 	</div>
-	<div class="media-body">
-		<h2 class="mega space-none"> Product Name</h2>
-			<p>  Lorem ipsum dolor sit amet, consectetuer adipiscing elit </p>
+	
+	<div class="media-details">
+	
+		<ul class="list-group">
+		<li class="list-group-item list-group-item-inline">
+			<img src= "http://placehold.it/32x32/00AABA" alt= "">
+		</li>
+		
+		<li class="list-group-item list-group-item-inline">
+			<img src= "http://placehold.it/32x32/D6EEEA" alt= "">
+		</li>
+		
+		<li class="list-group-item list-group-item-inline">
+			<img src= "http://placehold.it/32x32/8E8E06" alt= "">
+		</li>
+	</ul>
+	
+		<p class="mega space-none"> Product Name</h2>
+			<p class="micro">  Lorem ipsum dolor sit amet</p>
 	</div>
 </div>
 
-	<ul class="list-group">
-		<li class="list-group-item list-group-item-inline">
-			<img src= "http://placehold.it/32x32/ffff00" alt= "">
-		</li>
-		
-		<li class="list-group-item list-group-item-inline">
-			<img src= "http://placehold.it/32x32/ff00ff" alt= "">
-		</li>
-		
-		<li class="list-group-item list-group-item-inline">
-			<img src= "http://placehold.it/32x32/00ffff" alt= "">
-		</li>
-	</ul>
+
 	
 	<a class="btn" href="#"> Buy Now!</a>
 
 </div>
-	
-
-</body>
-</html>
