--- a/styleguide/typography.html
+++ b/styleguide/typography.html
@@ -3,14 +3,14 @@
 <head>
  <meta charset="utf-8">
  <title>Typography Styleguide</title>
-	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
-	  <link href="../css/typography.css" rel="stylesheet">
-	  <link href="../css/buttons.css" rel="stylesheet">
-	  <link href="../css/media-object.css" rel="stylesheet">
-	  <link href="../css/list-group.css" rel="stylesheet">
-	  <link href="../css/product.css" rel="stylesheet">
-	  <link href="../css/promos.css" rel="stylesheet">
-	  <link href="../css/forms.css" rel="stylesheet">
+	<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,200,300,700' rel='stylesheet' type='text/css'>	
+	<link href="../css/typography.css" rel="stylesheet">
+	<link href="../css/buttons.css" rel="stylesheet">
+	<link href="../css/media-object.css" rel="stylesheet">
+	<link href="../css/list-group.css" rel="stylesheet">
+	<link href="../css/product-list.css" rel="stylesheet">
+	<link href="../css/promos.css" rel="stylesheet">
+	<link href="../css/forms.css" rel="stylesheet">
   
   <style>
     /* Do not add CSS here -- this is just for controlling the line length */
