--- a/styleguide/product-list-item.html
+++ b/styleguide/product-list-item.html
@@ -16,14 +16,16 @@
 <body>
 <body>
 
-<ul class=list-group>
+<div class="container">
+   <div class="tag">Featured</div>
+   <img src="http://www.placehold.it/400x400">
+</div>
 
-<li class="list-group-item-inline">
 <div class="product">
 
 <div class="media">
 	<div class="media-img media-img-stacked">
-		<img class="img-flex" src="http://placehold.it/175x215" alt="">
+		<img class="img-flex" src="../images/boy-boot.jpg" alt="">
 	</div>
 	
 	<div class="media-details">
@@ -42,8 +44,9 @@
 		</li>
 	</ul>
 	
-		<p class="mega space-none"> Product Name</h2>
+		<p class="mega space-none"> Product Name</p>
 			<p class="micro">  Lorem ipsum dolor sit amet</p>
+			<p class="mega space-none"> $29.95</p>
 	</div>
 </div>
 
