--- a/styleguide/promo-large.html
+++ b/styleguide/promo-large.html
@@ -3,8 +3,51 @@
 <head>
 <meta charset="UTF-8">
 <title>Large Promo</title>
-</head>
+	<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,200,300,700' rel='stylesheet' type='text/css'>	
+	<link href="../css/typography.css" rel="stylesheet">
+	<link href="../css/list-group.css" rel="stylesheet">
+	<link href="../css/buttons.css" rel="stylesheet">
+	<link href="../css/media-object.css" rel="stylesheet">
+	<link href="../css/product-list.css" rel="stylesheet">
+	<link href="../css/promos.css" rel="stylesheet">
+	<link href="../css/forms.css" rel="stylesheet">
 
+</head>
 <body>
-</body>
-</html>
+<body>
+
+
+<div class="product">
+
+<div class="media">
+	<div class="media-img media-img-stacked">
+		<img class="img-flex" src="http://placehold.it/175x215" alt="">
+	</div>
+	
+	<div class="media-details">
+	
+		<ul class="list-group">
+		<li class="list-group-item list-group-item-inline">
+			<img src= "http://placehold.it/32x32/00AABA" alt= "">
+		</li>
+		
+		<li class="list-group-item list-group-item-inline">
+			<img src= "http://placehold.it/32x32/D6EEEA" alt= "">
+		</li>
+		
+		<li class="list-group-item list-group-item-inline">
+			<img src= "http://placehold.it/32x32/8E8E06" alt= "">
+		</li>
+	</ul>
+	
+		<p class="mega space-none"> Product Name</p>
+			<p class="micro">  Lorem ipsum dolor sit amet</p>
+			<p class="mega space-none"> $29.95</p>
+	</div>
+</div>
+
+
+	
+	<a class="btn" href="#"> Buy Now!</a>
+
+</div>
