--- a/styleguide/promo-small.html
+++ b/styleguide/promo-small.html
@@ -3,8 +3,30 @@
 <head>
 <meta charset="UTF-8">
 <title>Small Promo</title>
-</head>
+	<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,200,300,700' rel='stylesheet' type='text/css'>	
+	<link href="../css/typography.css" rel="stylesheet">
+	<link href="../css/list-group.css" rel="stylesheet">
+	<link href="../css/buttons.css" rel="stylesheet">
+	<link href="../css/media-object.css" rel="stylesheet">
+	<link href="../css/product-list.css" rel="stylesheet">
+	<link href="../css/promos.css" rel="stylesheet">
+	<link href="../css/forms.css" rel="stylesheet">
 
+</head>
 <body>
-</body>
-</html>
+<body>
+
+<div class="small-promo">
+	
+	<h2 class="header">New Spring Arrivals!</h2>
+	
+	<div class="container">
+		<div class="media-img media-img-stacked tag"> 
+			<p class="mega space-none"> Product Name</p>
+			<p class="micro">  Lorem ipsum dolor sit amet</p>
+			<p class="mega space-none"> Starting at <strong>$29.95</strong></p>
+		</div>
+			<img class="img-flex" src="../images/girls-promo.jpg" alt="">
+	</div>
+
+</div>
