--- a/styleguide/promo-large.html
+++ b/styleguide/promo-large.html
@@ -16,38 +16,15 @@
 <body>
 <body>
 
-
-<div class="product">
-
-<div class="media">
-	<div class="media-img media-img-stacked">
-		<img class="img-flex" src="http://placehold.it/175x215" alt="">
+<div class="large-promo">	
+	<div class="container">
+		<h2 class="header-tag yotto">New Spring Arrivals!</h2>
+		<div class="media-img media-img-stacked tag"> 
+			<h2 class="mega space-none"> Product Name</h2>
+			<p>  Lorem ipsum dolor sit amet</p>
+			<h2 class="mega space-none"> Starting at <strong>$29.95</strong></h2>
+		</div>
+			<img class="img-flex" src="../images/shirts.png" alt="">
 	</div>
-	
-	<div class="media-details">
-	
-		<ul class="list-group">
-		<li class="list-group-item list-group-item-inline">
-			<img src= "http://placehold.it/32x32/00AABA" alt= "">
-		</li>
-		
-		<li class="list-group-item list-group-item-inline">
-			<img src= "http://placehold.it/32x32/D6EEEA" alt= "">
-		</li>
-		
-		<li class="list-group-item list-group-item-inline">
-			<img src= "http://placehold.it/32x32/8E8E06" alt= "">
-		</li>
-	</ul>
-	
-		<p class="mega space-none"> Product Name</p>
-			<p class="micro">  Lorem ipsum dolor sit amet</p>
-			<p class="mega space-none"> $29.95</p>
-	</div>
-</div>
-
-
-	
-	<a class="btn" href="#"> Buy Now!</a>
 
 </div>
