--- a/styleguide/product-list-item.html
+++ b/styleguide/product-list-item.html
@@ -11,11 +11,13 @@
 	<link href="../css/product-list.css" rel="stylesheet">
 	<link href="../css/promos.css" rel="stylesheet">
 	<link href="../css/forms.css" rel="stylesheet">
+	<link href="../css/grid.css" rel="stylesheet">
 
 </head>
 <body>
 
-<div class="product">
+<div class="grid">
+<div class="product gutter unit unit-l-1-5">
 
 	<div class="media">
 		<div class="media-img media-img-stacked">
@@ -36,16 +38,15 @@
 			<li class="list-group-item list-group-item-inline">
 				<img src= "http://placehold.it/32x32/8E8E06" alt= "">
 			</li>
-		</ul>
+	</ul>
 	
 		<p class="mega space-none"> Product Name</p>
 			<p class="micro">  Lorem ipsum dolor sit amet</p>
 			<p class="mega space-none"> $29.95</p>
 	</div>
 </div>
-
-
 	
 	<a class="btn" href="#"> Buy Now!</a>
 
 </div>
+</body>
