created padding on buttons and made (a) look like brand family.
-added button shape on product list item page
-made all (a) have same font as other body.

--- a/styleguide/buttons.html
+++ b/styleguide/buttons.html
@@ -15,7 +15,7 @@
 
 <h1> Buttons </h1>
 <h2> Baby boy</h2>
-<a class="btn-boy micro" href="#">Click Here!</a>
+<a class="btn-boy milli" href="#">Click Here!</a>
 <a class="btn-boy kilo" href="#">Click Here!</a>
 <a class="btn-boy yotta" href="#">Click Here!</a>
 
