--- a/styleguide/product-list-item.html
+++ b/styleguide/product-list-item.html
@@ -12,6 +12,7 @@
 	<link href="../css/promos.css" rel="stylesheet">
 	<link href="../css/forms.css" rel="stylesheet">
 	<link href="../css/grid.css" rel="stylesheet">
+	<link href="../css/common.css" rel="stylesheet">
 
 </head>
 <body>
@@ -46,7 +47,7 @@
 	</div>
 </div>
 	
-	<a class="btn" href="#"> Buy Now!</a>
+	<a class="btn-boy micro" href="#"> Buy Now!</a>
 
 </div>
 </body>
