--- a/styleguide/buttons.html
+++ b/styleguide/buttons.html
@@ -11,6 +11,11 @@
 	<link href="../css/media-object.css" rel="stylesheet">
 	<link href="../css/promos.css" rel="stylesheet">
 	<link href="../css/forms.css" rel="stylesheet">
+	<link href="../css/grid.css" rel="stylesheet">
+	<link href="../css/common.css" rel="stylesheet">
+	<link href="../css/header.css" rel="stylesheet">
+	<link href="../css/footer.css" rel="stylesheet">
+	<link href="../css/product-details.css" rel="stylesheet">
 </head>
 
 <h1> Buttons </h1>
