--- a/styleguide/footer.html
+++ b/styleguide/footer.html
@@ -12,7 +12,7 @@
 	<link href="../css/promos.css" rel="stylesheet">
 	<link href="../css/forms.css" rel="stylesheet">
 	<link href="../css/grid.css" rel="stylesheet">
-	<link href="..css/common.css" rel="stylesheet">
+	<link href="../css/common.css" rel="stylesheet">
 	<link href="../css/header.css" rel="stylesheet">
 	<link href="../css/footer.css" rel="stylesheet">
 	<link href="../css/product-details.css" rel="stylesheet">
@@ -20,24 +20,5 @@
 
 <body>
 
-	<div class="container">
-		
-		<div id="search">
-
-			<form action="javascript:void(0);" method="GET">
-
-				<fieldset class="clearfix">
-
-					<input type="search" name="search" value="What are you looking for?" onBlur="if(this.value=='')this.value='What are you looking for?'" onFocus="if(this.value=='What are you looking for?')this.value='' "> <!-- JS because of IE support; better: placeholder="What are you looking for?" -->
-					<input type="submit" value="Search" class="button">
-
-				</fieldset>
-
-			</form>
-
-		</div> <!-- end search -->
-
-	</div> <!-- end container -->
-	
 </body>
 </html>
