--- a/styleguide/inclass-grid.html
+++ b/styleguide/inclass-grid.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en-ca">
 <head>
-	<meta charset="utf-8">
-	<title>Grids</title>
+<meta charset="utf-8">
+<title>Grids</title>
 	<meta name="handheldfriendly" content="true">
 	<meta name="mobileoptimized" content="240">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
@@ -12,7 +11,12 @@
 	<link href="../css/list-group.css" rel="stylesheet">
 	<link href="../css/media-object.css" rel="stylesheet">
 	<link href="../css/buttons.css" rel="stylesheet">
-	<link href="../css/grid.css"rel="stylesheet">
+	<link href="../css/grid.css" rel="stylesheet">
+	<link href="...css/common.css" rel="stylesheet">
+	<link href="../css/header.css" rel="stylesheet">
+	<link href="../css/footer.css" rel="stylesheet">
+	<link href="../css/product-details.css" rel="stylesheet">
+	
 </head>
 <body>
 
