--- a/styleguide/media-object.html
+++ b/styleguide/media-object.html
@@ -11,6 +11,11 @@
 	<link href="../css/promos.css" rel="stylesheet">
 	<link href="../css/product-list.css" rel="stylesheet">
 	<link href="../css/forms.css" rel="stylesheet">
+	<link href="../css/grid.css" rel="stylesheet">
+	<link href="../css/common.css" rel="stylesheet">
+	<link href="../css/header.css" rel="stylesheet">
+	<link href="../css/footer.css" rel="stylesheet">
+	<link href="../css/product-details.css" rel="stylesheet">
 </head>
 
 <body>
