--- a/styleguide/promo-large.html
+++ b/styleguide/promo-large.html
@@ -11,20 +11,42 @@
 	<link href="../css/product-list.css" rel="stylesheet">
 	<link href="../css/promos.css" rel="stylesheet">
 	<link href="../css/forms.css" rel="stylesheet">
+	<link href="../css/grid.css" rel="stylesheet">
+	<link href="..css/common.css" rel="stylesheet">
+	<link href="../css/header.css" rel="stylesheet">
+	<link href="../css/footer.css" rel="stylesheet">
+	<link href="../css/product-details.css" rel="stylesheet">
 
 </head>
 <body>
-<body>
 
-<div class="large-promo">	
-	<div class="container">
-		<h2 class="header-tag yotto">New Spring Arrivals!</h2>
+<div class="grid">
+	<div class="unit gutter unit-s-1 unit-m-1 unit-l-1">
+		<h2>New Spring Arrivals!</h2>
+		<img class="img-flex" src="http://placehold.it/1400x450" alt="">
 		<div class="media-img media-img-stacked tag"> 
 			<h2 class="mega space-none"> Product Name</h2>
 			<p>  Lorem ipsum dolor sit amet</p>
-			<h2 class="mega space-none"> Starting at <strong>$29.95</strong></h2>
+			<h2 class="mega space-none"> Starting at</h2>
+			<h2 class="xl"> $11.99</h2> </a>
 		</div>
-			<img class="img-flex" src="../images/shirts.png" alt="">
+			
 	</div>
-
+</div>
+	
+	
+<div class="grid">
+<div class="large-promo gutter unit unit-s-1 unit-m-1-2 unit-l-1-3">	
+	<div class="container">
+	<img class="img-flex" src="http://placehold.it/1400x500" alt="">
+		<h2 class="header-tag yotto">New Spring Arrivals!</h2>
+		<div class="media-img media-img-stacked tag"> 
+			<a class="btn-boy">
+			<h2 class="mega space-none"> Product Name</h2>
+			<p>  Lorem ipsum dolor sit amet</p>
+			<h2 class="mega space-none"> Starting at</h2>
+			<h2 class="xl"> $11.99</h2> </a>
+		</div>
+	</div>
+</div>
 </div>
