--- a/styleguide/typography.html
+++ b/styleguide/typography.html
@@ -11,7 +11,13 @@
 	<link href="../css/product-list.css" rel="stylesheet">
 	<link href="../css/promos.css" rel="stylesheet">
 	<link href="../css/forms.css" rel="stylesheet">
-  
+	<link href="../css/grid.css" rel="stylesheet">
+	<link href="..css/common.css" rel="stylesheet">
+	<link href="../css/header.css" rel="stylesheet">
+	<link href="../css/footer.css" rel="stylesheet">
+	<link href="../css/product-details.css" rel="stylesheet">
+	
+	
   <style>
     /* Do not add CSS here -- this is just for controlling the line length */
     body {
