--- a/styleguide/header.html
+++ b/styleguide/header.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Header</title>
 	<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,200,300,700' rel='stylesheet' type='text/css'>	
-	<link href="css/typography.css" rel="stylesheet">
+	<link href="../css/typography.css" rel="stylesheet">
 	<link href="../css/buttons.css" rel="stylesheet">
 	<link href="../css/media-object.css" rel="stylesheet">
 	<link href="../css/list-group.css" rel="stylesheet">
@@ -21,24 +21,15 @@
 <body>
 
 
-<div class="grid-header">
-	<div class="unit gutter unit-s-1 unit-m-2-5 unit-2-5">
-		<p> </p>
+<div class="grid grid-header">
+	<div class="unit gutter unit-s-1 unit-m-1-3 unit-1-3">
+		<h2><a href="#"> Boys</a>	</h2>
+		</div>
+	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
+		<img class="img-flex" src="http://placehold.it/400x80" alt="">	
 	</div>
-	<div class="unit gutter unit-s-1 unit-m-2-5 unit-2-5">
-		<h2>Unit 1</h2>
-		<p>Lorem ipsum dolor sit amet, consectetuer elit.</p>
-	</div>
-	<div class="unit gutter unit-s-1 unit-m-1-5 unit-l-1-5">
-		<h2>Unit 2</h2>
-		<img class="img-flex" src="http://placehold.it/300x200" alt="">	
-	</div>
-	<div class="unit gutter unit-s-1 unit-m-2-5 unit-2-5">
-		<h2>Unit 3</h2>
-		<p>Lorem ipsum dolor sit amet, consectetuer elit.</p>
-	</div>
-	<div class="unit gutter unit-s-1 unit-m-2-5 unit-2-5">
-		<p> </p>
+	<div class="unit gutter unit-s-1 unit-m-1-3 unit-1-3">
+		<h2><a href="#"> Girls</a></h2>	
 	</div>
 </div>
 
