--- a/styleguide/footer.html
+++ b/styleguide/footer.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Search Field</title>
+<title>Footer</title>
 	<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,200,300,700' rel='stylesheet' type='text/css'>	
-	<link href="css/typography.css" rel="stylesheet">
+	<link href="../css/typography.css" rel="stylesheet">
 	<link href="../css/buttons.css" rel="stylesheet">
 	<link href="../css/media-object.css" rel="stylesheet">
 	<link href="../css/list-group.css" rel="stylesheet">
@@ -19,6 +19,30 @@
 </head>
 
 <body>
+
+
+<div class="grid grid-footer">
+	<div class="unit gutter unit-s-1 unit-m-1-3 unit-1-3">
+		<p><a href="#"> Copyright c</a>	</p>
+		</div>
+		<div class="unit gutter units-1 unit-m-1-3 unit-l-1-3">
+		<ul class="list-group">
+			<li class="list-group-item list-group-item-inline">
+				<img src= "http://placehold.it/32x32/00AABA" alt= "">
+			</li>
+			
+			<li class="list-group-item list-group-item-inline">
+				<img src= "http://placehold.it/32x32/D6EEEA" alt= "">
+			</li>
+			
+			<li class="list-group-item list-group-item-inline">
+				<img src= "http://placehold.it/32x32/8E8E06" alt= "">
+			</li>
+		</ul></div>
+	<div class="unit gutter unit-s-1 unit-m-1-3 unit-1-3">
+		<p><a href="#"> Back to top</a></p>	
+	</div>
+</div>
 
 </body>
 </html>
