--- a/styleguide/footer.html
+++ b/styleguide/footer.html
@@ -23,20 +23,20 @@
 
 <div class="grid grid-footer">
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-1-3">
-		<p><a href="#"> Copyright c</a>	</p>
+		<p>Copyright c	</p>
 		</div>
 		<div class="unit gutter units-1 unit-m-1-3 unit-l-1-3">
 		<ul class="list-group">
 			<li class="list-group-item list-group-item-inline">
-				<img src= "http://placehold.it/32x32/00AABA" alt= "">
+				<a href="#"><img src= "http://placehold.it/32x32/00AABA" alt= "facebook"></a>
 			</li>
 			
 			<li class="list-group-item list-group-item-inline">
-				<img src= "http://placehold.it/32x32/D6EEEA" alt= "">
+				<a href="#"><img src= "http://placehold.it/32x32/D6EEEA" alt= "twitter"></a>
 			</li>
 			
 			<li class="list-group-item list-group-item-inline">
-				<img src= "http://placehold.it/32x32/8E8E06" alt= "">
+				<a href="#"><img src= "http://placehold.it/32x32/8E8E06" alt= "email"></a>
 			</li>
 		</ul></div>
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-1-3">
