made first detail row on product-details

--- a/styleguide/product-details.html
+++ b/styleguide/product-details.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Product List Item</title>
+<title>Product Details</title>
 	<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,200,300,700' rel='stylesheet' type='text/css'>	
 	<link href="../css/typography.css" rel="stylesheet">
 	<link href="../css/list-group.css" rel="stylesheet">
@@ -20,5 +20,22 @@
 
 </head>
 <body>
+
+
+<div class="grid">
+	<div class="unit gutter unit-s-1 unit-m-1-2 unit-l-1-3">
+		<h2>Unit 1</h2>
+		<img class="img-flex" src="http://placehold.it/400x600" alt="">	</div>
+	<div class="unit gutter unit-s-1-2 unit-m-1-4 unit-l-1-3">
+		<h2>Unit 2</h2>
+		<p>Lorem ipsum dolor sit amet, consectetuer elit.</p>
+	</div>
+	<div class="unit gutter unit-s-1-2 unit-m-1-4 unit-l-1-3">
+		<h2>Unit 3</h2>
+		<p>Lorem ipsum dolor sit amet, consectetuer elit.</p>
+	</div>
+</div>
+
+
 
 </body>
