--- a/styleguide/footer.html
+++ b/styleguide/footer.html
@@ -38,7 +38,8 @@
 			<li class="list-group-item list-group-item-inline">
 				<a href="#"><img src= "http://placehold.it/32x32/8E8E06" alt= "email"></a>
 			</li>
-		</ul></div>
+		</ul>
+		</div>
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-1-3">
 		<p><a href="#"> Back to top</a></p>	
 	</div>
