--- a/styleguide/product-details.html
+++ b/styleguide/product-details.html
@@ -22,10 +22,10 @@
 <body>
 
 
-<div class="grid">
+<div class="grid-details">
 	<div class="unit gutter unit-s-1 unit-m-1-2 unit-l-1-3">
 		<h2>Unit 1</h2>
-		<img class="img-flex" src="http://placehold.it/400x600" alt="">	</div>
+		<img class="img-flex" src="http://placehold.it/400x400" alt="">	</div>
 	<div class="unit gutter unit-s-1-2 unit-m-1-4 unit-l-1-3">
 		<h2>Unit 2</h2>
 		<p>Lorem ipsum dolor sit amet, consectetuer elit.</p>
@@ -36,6 +36,23 @@
 	</div>
 </div>
 
+<h2>You might also like: </h2>
+
+<div class="grid-details">
+	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
+		<h2>Unit 1</h2>
+		<p>Lorem ipsum dolor sit amet, consectetuer elit.</p>
+	
+	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
+		<h2>Unit 2</h2>
+		<p>Lorem ipsum dolor sit amet, consectetuer elit.</p>
+	</div>
+	
+	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
+		<h2>Unit 3</h2>
+		<p>Lorem ipsum dolor sit amet, consectetuer elit.</p>
+	</div>
+</div>
 
 
 </body>
