--- a/styleguide/product-details.html
+++ b/styleguide/product-details.html
@@ -42,7 +42,7 @@
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
 		<h2>Unit 1</h2>
 		<p>Lorem ipsum dolor sit amet, consectetuer elit.</p>
-	
+	</div>
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
 		<h2>Unit 2</h2>
 		<p>Lorem ipsum dolor sit amet, consectetuer elit.</p>
