--- a/styleguide/product-details.html
+++ b/styleguide/product-details.html
@@ -24,15 +24,14 @@
 
 <div class="grid-details">
 	<div class="unit gutter unit-s-1 unit-m-1-2 unit-l-1-3">
-		<h2>Unit 1</h2>
+		<h2 class="yotto">product name</h2>
 		<img class="img-flex" src="http://placehold.it/400x400" alt="">	</div>
 	<div class="unit gutter unit-s-1-2 unit-m-1-4 unit-l-1-3">
 		<h2>Unit 2</h2>
 		<p>Lorem ipsum dolor sit amet, consectetuer elit.</p>
 	</div>
 	<div class="unit gutter unit-s-1-2 unit-m-1-4 unit-l-1-3">
-		<h2>Unit 3</h2>
-		<p>Lorem ipsum dolor sit amet, consectetuer elit.</p>
+		<a class="btn-boy mega" href="#">Click Here!</a>
 	</div>
 </div>
 
@@ -41,17 +40,14 @@
 <div class="grid-details">
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
 		<h2>Unit 1</h2>
-		<p>Lorem ipsum dolor sit amet, consectetuer elit.</p>
-	</div>
+		<img class="img-flex" src="http://placehold.it/400x80" alt="">	</div>
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
 		<h2>Unit 2</h2>
-		<p>Lorem ipsum dolor sit amet, consectetuer elit.</p>
-	</div>
+		<img class="img-flex" src="http://placehold.it/400x80" alt="">	</div>
 	
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
 		<h2>Unit 3</h2>
-		<p>Lorem ipsum dolor sit amet, consectetuer elit.</p>
-	</div>
+		<img class="img-flex" src="http://placehold.it/400x80" alt="">	</div>
 </div>
 
 
