--- a/styleguide/product-details.html
+++ b/styleguide/product-details.html
@@ -28,12 +28,40 @@
 		<img class="img-flex" src="http://placehold.it/400x400" alt="">	</div>
 	<div class="unit gutter unit-s-1-2 unit-m-1-4 unit-l-1-3">
 		<h2>Unit 2</h2>
+			<ul class="list-group">
+			<li class="list-group-item">
+				Lorem ipsum dolor sit amet
+			</li>
+			<li class="list-group-item">
+				 dolor sit amet
+			</li>
+			<li class="list-group-item">
+				Lorem ipsum dolor sit amet
+			</li>
+			<li class="list-group-item">
+				Lorem ipsum  sit amet
+			</li>	
+		</ul>
+	</div>
+	<div class="unit gutter unit-s-1-2 unit-m-1-4 unit-l-1-3">
+		<a class="btn-boy yotta" href="#">Buy Now!</a>
+	</div>
+</div>
+
+
+<div class="grid-details">
+	<div class="unit gutter unit-s-1 unit-m-1-2 unit-l-1-3">
+		<h2 class="yotto">product details</h2>
+		<img class="img-flex" src="http://placehold.it/400x400" alt="">	</div>
+	<div class="unit gutter unit-s-1-2 unit-m-1-4 unit-l-1-3">
+		<h2>Unit 2</h2>
 		<p>Lorem ipsum dolor sit amet, consectetuer elit.</p>
 	</div>
 	<div class="unit gutter unit-s-1-2 unit-m-1-4 unit-l-1-3">
-		<a class="btn-boy mega" href="#">Click Here!</a>
+		<a class="btn-boy yotta" href="#">Buy Now!</a>
 	</div>
 </div>
+
 
 <h2>You might also like: </h2>
 
