--- a/styleguide/buttons.html
+++ b/styleguide/buttons.html
@@ -20,19 +20,19 @@
 
 <h1> Buttons </h1>
 <h2> Baby boy</h2>
-<a class="btn-boy milli" href="#">Click Here!</a>
-<a class="btn-boy kilo" href="#">Click Here!</a>
-<a class="btn-boy yotta" href="#">Click Here!</a>
+<a class="btn btn-boy milli" href="#">Click Here!</a>
+<a class="btn btn-boy kilo" href="#">Click Here!</a>
+<a class="btn btn-boy yotta" href="#">Click Here!</a>
 
 <h2>Baby girl</h2>
-<a class="btn-girl micro" href="#">Click Here!</a>
-<a class="btn-girl kilo" href="#">Click Here!</a>
-<a class="btn-girl yotta" href="#">Click Here!</a>
+<a class="btn btn-girl micro" href="#">Click Here!</a>
+<a class="btn btn-girl kilo" href="#">Click Here!</a>
+<a class="btn btn-girl yotta" href="#">Click Here!</a>
 
 <h2> Neutral</h2>
-<a class="btn-grey micro" href="#">Click Here!</a>
-<a class="btn-grey kilo" href="#">Click Here!</a>
-<a class="btn-grey yotta" href="#">Click Here!</a>
+<a class="btn btn-grey micro" href="#">Click Here!</a>
+<a class="btn btn-grey kilo" href="#">Click Here!</a>
+<a class="btn btn-grey yotta" href="#">Click Here!</a>
 
 
 
