--- a/styleguide/product-details.html
+++ b/styleguide/product-details.html
@@ -25,7 +25,8 @@
 
 <div class="grid-details">
 	<div class="unit gutter unit-s-1 unit-m-1-2 unit-l-1-3">
-		<img class="img-flex" src="http://placehold.it/400x400" alt="">	</div>
+		<a href="#"><img class="img-flex" src="http://placehold.it/400x400" alt=""></a>	
+	</div>
 	<div class="unit gutter unit-s-1-2 unit-m-1-4 unit-l-1-3">
 		<h2>Unit 2</h2>
 			<ul class="list-group">
@@ -54,14 +55,16 @@
 <div class="grid-details">
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
 		<h2>Unit 1</h2>
-		<img class="img-flex" src="http://placehold.it/400x80" alt="">	</div>
+		<a href="#"><img class="img-flex" src="http://placehold.it/400x80" alt=""></a>	
+		</div>
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
 		<h2>Unit 2</h2>
-		<img class="img-flex" src="http://placehold.it/400x80" alt="">	</div>
-	
+		<a href="#"><img class="img-flex" src="http://placehold.it/400x80" alt=""></a>	
+		</div>
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
 		<h2>Unit 3</h2>
-		<img class="img-flex" src="http://placehold.it/400x80" alt="">	</div>
+		<a href="#"><img class="img-flex" src="http://placehold.it/400x80" alt=""></a>	
+	</div>
 </div>
 
 
