removed underline on links and re-added colour for hover.
also added link to logo on header

--- a/styleguide/header.html
+++ b/styleguide/header.html
@@ -26,7 +26,7 @@
 		<h2><a href="#"> Boys</a>	</h2>
 		</div>
 	<div class="unit gutter unit-s-1 unit-m-1-4 unit-l-1-4">
-		<img class="img-flex" src="http://placehold.it/400x80" alt="">	
+		<a href="#"><img class="img-flex" src="http://placehold.it/400x80" alt=""></a>	
 	</div>
 	<div class="unit gutter unit-s-1 unit-m-1-4 unit-1-4">
 		<h2><a href="#"> Girls</a></h2>	
