--- a/styleguide/product-details.html
+++ b/styleguide/product-details.html
@@ -27,7 +27,7 @@
 	<div class="unit gutter unit-s-1 unit-m-1-2 unit-l-1-3">
 		<a href="#"><img class="img-flex" src="http://placehold.it/400x400" alt=""></a>	
 	</div>
-	<div class="unit gutter unit-s-1-2 unit-m-1-4 unit-l-1-3">
+	<div class="unit gutter unit-s-1 unit-m-1-4 unit-l-1-3">
 		<h2>Unit 2</h2>
 			<ul class="list-group">
 			<li class="list-group-item">
@@ -44,7 +44,7 @@
 			</li>	
 		</ul>
 	</div>
-	<div class="unit gutter unit-s-1-2 unit-m-1-4 unit-l-1-3">
+	<div class="unit gutter unit-s-1 unit-m-1-4 unit-l-1-3">
 		<a class="btn-boy yotta" href="#">Buy Now!</a>
 	</div>
 </div>
