--- a/styleguide/product-details.html
+++ b/styleguide/product-details.html
@@ -23,7 +23,7 @@
 
 <h2 class="yotto">product name</h2>
 
-<div class="grid-details">
+<div class="grid-details-boy">
 	<div class="unit gutter unit-s-1 unit-m-1-2 unit-l-1-3">
 		<a href="#"><img class="img-flex" src="http://placehold.it/400x400" alt=""></a>	
 	</div>
@@ -52,7 +52,7 @@
 
 <h2>You might also like: </h2>
 
-<div class="grid-details">
+<div class="grid-details-boy">
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
 		<h2>Unit 1</h2>
 		<a href="#"><img class="img-flex" src="http://placehold.it/400x80" alt=""></a>	
@@ -66,6 +66,55 @@
 		<a href="#"><img class="img-flex" src="http://placehold.it/400x80" alt=""></a>	
 	</div>
 </div>
+
+<!-- Girl product page-->
+
+<h2 class="girl yotta"> Product Name </h2>
+
+<div class="grid-details-girl">
+	<div class="unit gutter unit-s-1 unit-m-1-2 unit-l-1-3">
+		<a href="#"><img class="img-flex" src="http://placehold.it/400x400" alt=""></a>	
+	</div>
+	<div class="unit gutter unit-s-1 unit-m-1-4 unit-l-1-3">
+		<h2 class="girl">Unit 2</h2>
+			<ul class="list-group">
+			<li class="list-group-item">
+				Lorem ipsum dolor sit amet
+			</li>
+			<li class="list-group-item">
+				 dolor sit amet
+			</li>
+			<li class="list-group-item">
+				Lorem ipsum dolor sit amet
+			</li>
+			<li class="list-group-item">
+				Lorem ipsum  sit amet
+			</li>	
+		</ul>
+	</div>
+	<div class="unit gutter unit-s-1 unit-m-1-4 unit-l-1-3">
+		<a class="btn-girl yotta" href="#">Buy Now!</a>
+	</div>
+</div>
+
+
+<h2 class="girl">You might also like: </h2>
+
+<div class="grid-details-girl">
+	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
+		<h2 class="girl">Unit 1</h2>
+		<a href="#"><img class="img-flex" src="http://placehold.it/400x80" alt=""></a>	
+		</div>
+	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
+		<h2 class="girl">Unit 2</h2>
+		<a href="#"><img class="img-flex" src="http://placehold.it/400x80" alt=""></a>	
+		</div>
+	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
+		<h2 class="girl">Unit 3</h2>
+		<a href="#"><img class="img-flex" src="http://placehold.it/400x80" alt=""></a>	
+	</div>
+</div>
+
 
 
 </body>
