--- a/styleguide/footer.html
+++ b/styleguide/footer.html
@@ -25,8 +25,9 @@
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-1-3">
 		<p>Copyright c	</p>
 		</div>
-		<div class="unit gutter units-1 unit-m-1-3 unit-l-1-3">
-		<ul class="list-group">
+		
+		<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
+		<ul class="list-group social">
 			<li class="list-group-item list-group-item-inline">
 				<a href="#"><img src= "http://placehold.it/32x32/00AABA" alt= "facebook"></a>
 			</li>
@@ -40,6 +41,7 @@
 			</li>
 		</ul>
 		</div>
+	
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-1-3">
 		<p><a href="#"> Back to top</a></p>	
 	</div>
