--- a/styleguide/typography.html
+++ b/styleguide/typography.html
@@ -29,38 +29,38 @@
 </head>
 <body>
 
-<h1>Heading Level 1 <a href="#">Linked</a></h1>
+<h1>Heading Level 1 <a class="boy" href="#">Linked</a></h1>
 
 	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
 	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
 
-<h2>Heading Level 2 <a href="#">Linked</a></h2>
+<h2>Heading Level 2 <a class="boy" href="#">Linked</a></h2>
 
 	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
 
-<h3>Heading Level 3 <a href="#">Linked</a></h3>
+<h3>Heading Level 3 <a class="boy" href="#">Linked</a></h3>
 
 	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
 
-<h4>Heading Level 4 <a href="#">Linked</a></h4>
+<h4>Heading Level 4 <a class="boy" href="#">Linked</a></h4>
 
 	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque 	penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
 
-<h5>Heading Level 5 <a href="#">Linked</a></h5>
+<h5>Heading Level 5 <a class="boy" href="#">Linked</a></h5>
 
 	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
 
-<h6>Heading Level 6 <a href="#">Linked</a></h6>
+<h6>Heading Level 6 <a class="boy" href="#">Linked</a></h6>
 
 	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
 
-<h1 class="yotta">Yotta Size <a href="#">Linked</a></h1>
+<h1 class="yotta">Yotta Size <a class="boy" href="#">Linked</a></h1>
 
-	<p class="tera">Lorem ipsum dolor sit amet, <a href="#">consectetuer adipiscing elit.</a></p>
+	<p class="tera">Lorem ipsum dolor sit amet, <a class="boy" href="#">consectetuer adipiscing elit.</a></p>
 
-<h1 class="zetta">Zetta Size <a href="#">Linked</a></h1>
+<h1 class="zetta">Zetta Size <a class="boy" href="#">Linked</a></h1>
 
-	<p class="giga">Lorem ipsum dolor sit amet, <a href="#">consectetuer adipiscing elit.</a></p>
+	<p class="giga">Lorem ipsum dolor sit amet, <a class="boy" href="#">consectetuer adipiscing elit.</a></p>
 
 <hr>
 
