created layouts folder and default html file

--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Home</title>
-</head>
+---
+layout: default
+---
+
 <h1>Ecommerce Website Home Page</h1>
 <p>Welcome!</p>
-<body>
-</body>
-</html>
