product grid laid out correctly

--- a/about.html
+++ b/about.html
@@ -3,3 +3,13 @@ layout: default
 ---
 
 <h1>ABOUT</h1>
+
+
+About Toys“R”Us, Canada
+
+Toys "R" Us (Canada) Ltd., is part of Toys "R" Us, Inc., the world's leading dedicated toy and baby products retailer. Toys "R" Us, Canada operates nearly 70 stores across the country. For store locations and convenient online shopping, visit www.Toysrus.com.
+
+
+About Toys“R”Us, Inc.
+
+Toys "R" Us, Inc. is the world’s leading dedicated toy and juvenile products retailer, offering a differentiated shopping experience through its family of brands. Merchandise is sold in 868 Toys "R" Us and Babies "R" Us stores in the United States, and in more than 520 international stores and over 200 licensed stores in 33 countries and jurisdictions. In addition, it exclusively operates the legendary FAO Schwarz brand and sells extraordinary toys in the brand’s flagship store on Fifth Avenue in New York City. With its strong portfolio of e-commerce sites including Toysrus.com, Babiesrus.com, eToys.com, FAO.com and babyuniverse.com, it provides shoppers with a broad online selection of distinctive toy and baby products. Headquartered in Wayne, NJ, Toys "R" Us, Inc. employs approximately 70,000 associates worldwide. The company is committed to serving its communities as a caring and reputable neighbor through programs dedicated to keeping kids safe and helping them in times of need.
