added text to thank-you page

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ layout: default
 
 Little Monkeys
 
-Little Monkeys (Canada) is the world's leading babies clothing retailer. Little Monkeys Canada operates nearly 70 stores across the country. For store locations and convenient online shopping, visit www.Toysrus.com.
+Little Monkeys (Canada) is the world's leading babies clothing retailer. Little Monkeys Canada operates nearly 70 stores across the country. For store locations and convenient online shopping, visit www.littlemonkeys.com
 
 
 About Little Monkeys, Inc.
