--- a/styleguide/product-list-item.html
+++ b/styleguide/product-list-item.html
@@ -1,24 +1,6 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Product List Item</title>
-	<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,200,300,700' rel='stylesheet' type='text/css'>	
-	<link href="../css/typography.css" rel="stylesheet">
-	<link href="../css/list-group.css" rel="stylesheet">
-	<link href="../css/buttons.css" rel="stylesheet">
-	<link href="../css/media-object.css" rel="stylesheet">
-	<link href="../css/product-list.css" rel="stylesheet">
-	<link href="../css/promos.css" rel="stylesheet">
-	<link href="../css/forms.css" rel="stylesheet">
-	<link href="../css/grid.css" rel="stylesheet">
-	<link href="../css/common.css" rel="stylesheet">	
-	<link href="../css/header.css" rel="stylesheet">
-	<link href="../css/footer.css" rel="stylesheet">
-	<link href="../css/product-details.css" rel="stylesheet">
-
-</head>
-<body>
+---
+layout: default
+---
 
 <div class="grid">
 <div class="product gutter unit unit-l-1-5">
