added banner on about page and banner text

--- a/about.html
+++ b/about.html
@@ -2,6 +2,8 @@
 layout: default
 title: About Little Monkeys
 meta: All about the Little Monkeys Baby Clothing brand.
+bannertext: SPRING SALE · SAVE UP TO 40% OFF
+showbanner: yes
 ---
 
 <h1>ABOUT</h1>
