--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: default
 title: About Little Monkeys
 meta: All about the Little Monkeys Baby Clothing brand.
-bannertext: SPRING SALE · SAVE UP TO 40% OFF
+bannertext: CLICK TO FIND THE LOCATION NEAREST YOU
 showbanner: yes
 ---
 
