--- a/index.html
+++ b/index.html
@@ -6,8 +6,23 @@ bannertext: SPRING SALE · SAVE UP TO 40% OFF
 showbanner: yes
 ---
 
-<h1>index</h1>
-<p>Welcome!</p>
+<div class="grid">
+	<div class="unit gutter unit-s-1 unit-m-1 unit-l-1">
+		<div class="media">
+		<div class="media-img media-img-stacked">
+			<img class="img-flex" src="../images/boy-boot.jpg" alt="">	
+		</div>
+			
+			<div class="media-details">
+					
+					<p class="mega space-none"> Product Name</p>
+					<p class="micro">  Lorem ipsum dolor sit amet</p>
+					<p class="mega space-none"> $29.95</p>
+			</div>
+		</div>
+	<a class="btn-boy micro" href="#"> Buy Now!</a>
+	</div>	
+</div>
 
 <div class="grid">
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
@@ -24,7 +39,7 @@ showbanner: yes
 			</div>
 		</div>
 	<a class="btn-boy micro" href="#"> Buy Now!</a>
-</div>	
+	</div>	
 
 
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
@@ -41,7 +56,7 @@ showbanner: yes
 			</div>
 		</div>
 	<a class="btn-boy micro" href="#"> Buy Now!</a>
-</div>	
+	</div>	
 
 
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
@@ -58,5 +73,5 @@ showbanner: yes
 			</div>
 		</div>
 	<a class="btn-boy micro" href="#"> Buy Now!</a>
-</div>	
+	</div>	
 </div>
