added background colours to promo-large and small
- added pages to boys-clothing/tops and bottoms and shoes as well as
for girls-clothing. list still not showing up

--- a/boys-clothing/index.html
+++ b/boys-clothing/index.html
@@ -7,14 +7,8 @@ meta: Affordable and Adorable Clothing for your little monkeys!
 <h1> Boys Clothing </h1>
 
 <h2>Tops</h2>
-	<ul>
-	  {% for boys-clothing in site.pages%}
-		<li>
-		  {{boys-clothing.title}}
-		  </li>
-		 	  {% endfor %}
-
-		 </ul>
+	{% include boys-clothing-list.html %}
+	
 <h2>Bottoms</h2>
 
 <h2>Shoes</h2>
