--- a/boys-clothing/tops/short-sleeve.html
+++ b/boys-clothing/tops/short-sleeve.html
@@ -1,7 +1,8 @@
 ---
 layout: boys-clothing
 title: Short Sleeve
-meta: Affordable and Adorable Clothing for your little monkeys!
-bannertext: short-sleeve
-showbanner: yes
+meta: Little Monkeys | Boys Short Sleeve Tops
+type: tops
 ---
+
+<h1>Short Sleeve</h1>
