--- a/girls-clothing/tops/short-sleeve.html
+++ b/girls-clothing/tops/short-sleeve.html
@@ -1,10 +1,7 @@
 ---
 layout: boys-clothing
-title: Long Sleeve
+title: Short Sleeve
 meta: Affordable and Adorable Clothing for your little monkeys!
-type: tops
 bannertext: short-sleeve
 showbanner: yes
 ---
-
-<h1>Long Sleeve</h1>
