--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ showbanner: yes
 </div>
 
 
-<div class="grid">
+<div class="grid grid-promo-small">
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
 		{% include promo-small.html title="New Boots" desc="Starting from only $15.99" image="boy-boot.jpg" %}
 	</div>	
