added includes and fixed lists

--- a/boys-clothing/index.html
+++ b/boys-clothing/index.html
@@ -7,8 +7,10 @@ meta: Affordable and Adorable Clothing for your little monkeys!
 <h1> Boys Clothing </h1>
 
 <h2>Tops</h2>
-	{% include boys-clothing-list.html %}
-	
+{% include boys-clothing-list.html category='tops' %}
+
 <h2>Bottoms</h2>
+{% include boys-clothing-list.html category='bottoms' %}
 
 <h2>Shoes</h2>
+{% include boys-clothing-list.html category='shoes' %}
