--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ showbanner: yes
 
 <div class="grid grid-promo-large">
 	<div class="unit gutter unit-s-1 unit-m-1 unit-l-1">
-		{% include promo-large.html title="New Boots" price="Starting from only $15.99" desc="Lorem ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit amet"  image="boy-boot.jpg" %}
+		{% include promo-large.html title="New Spring Pants!" price="Starting from only $15.99" desc="Lorem ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit amet"  image="pants.jpg" %}
 	</div>	
 </div>
 
