added descriptions to specific search units

--- a/about.html
+++ b/about.html
@@ -9,11 +9,11 @@ showbanner: yes
 <h1>ABOUT</h1>
 
 
-Little Monkeys
+<h2>Little Monkeys</h2>
 
-Little Monkeys (Canada) is the world's leading babies clothing retailer. Little Monkeys Canada operates nearly 70 stores across the country. For store locations and convenient online shopping, visit www.littlemonkeys.com
+	<p>Little Monkeys (Canada) is the world's leading babies clothing retailer. Little Monkeys Canada operates nearly 70 stores across the country. For store locations and convenient online shopping, visit www.littlemonkeys.com</p>
 
 
-About Little Monkeys, Inc.
+	<p>About Little Monkeys, Inc.
 
-Little Monkeys, Inc. is the world’s leading dedicated toy and juvenile products retailer, offering a differentiated shopping experience through its family of brands. Merchandise is sold in 2 Little Monkeys stores in the United States, and in more than 7 international stores and over 10 licensed stores in 5 countries and jurisdictions. In addition, it exclusively operates the legendary FAO Schwarz brand and sells extraordinary toys in the brand’s flagship store on Fifth Avenue in New York City. With its strong portfolio of e-commerce sites including, eToys.com, FAO.com and babyuniverse.com, it provides shoppers with a broad online selection of distinctive toy and baby products. Headquartered in Wayne, NJ, Little Monkeys Inc. employs approximately 70,000 associates worldwide. The company is committed to serving its communities as a caring and reputable neighbor through programs dedicated to keeping kids safe and helping them in times of need.
+	<p>Little Monkeys, Inc. is the world’s leading dedicated toy and juvenile products retailer, offering a differentiated shopping experience through its family of brands. Merchandise is sold in 2 Little Monkeys stores in the United States, and in more than 7 international stores and over 10 licensed stores in 5 countries and jurisdictions. In addition, it exclusively operates the legendary FAO Schwarz brand and sells extraordinary toys in the brand’s flagship store on Fifth Avenue in New York City. With its strong portfolio of e-commerce sites including, eToys.com, FAO.com and babyuniverse.com, it provides shoppers with a broad online selection of distinctive toy and baby products. Headquartered in Wayne, NJ, Little Monkeys Inc. employs approximately 70,000 associates worldwide. The company is committed to serving its communities as a caring and reputable neighbor through programs dedicated to keeping kids safe and helping them in times of need.</p>
