--- a/search.html
+++ b/search.html
@@ -10,15 +10,15 @@ showbanner: yes
 <div class="grid">
 	
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
-		{% include search.html title="Girls loose fit jeans" desc="light-wash" price="$14.99"  image="jeans.jpg" %}
+		{% include search.html title="Girls loose fit jean" desc="light-wash" price="$14.99"  image="jeans.jpg" %}
 	</div>	
 		
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
-		{% include search.html title="Girls loose fit jeans" desc="light-wash" price="$14.99"  image="jeans.jpg" %}
+		{% include search.html title="Girls skinny jean" desc="light-wash" price="$14.99"  image="jeans4.jpg" %}
 	</div>	
 		
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
-		{% include search.html title="Girls loose fit jeans" desc="light-wash" price="$14.99"  image="jeans.jpg" %}
+		{% include search.html title="Boys loose fit jean" desc="light-wash" price="$14.99"  image="jeans2.jpg" %}
 	</div>	
 </div>
 	
