made all buttons  bring user to cart page

--- a/grid-girl.html
+++ b/grid-girl.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Boys Clothing
-meta: Boys Clothing Product Page
+title: Girls Clothing
+meta: Girls Clothing Product Page
 ---
 
-<h1>Boys Products</h1>
+<h1>Girls Products</h1>
 
 	<div class="grid">
 		<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
@@ -31,7 +31,7 @@ meta: Boys Clothing Product Page
 						<p class="mega space-none"> $29.95</p>
 					</div>
 			</div>
-			<a class="btn-boy micro" href="#"> Buy Now!</a>
+			<a class="btn-boy micro" href="{{site.baseurl}}/cart/"> Buy Now!</a>
 		</div>	
 		
 			<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
@@ -58,7 +58,7 @@ meta: Boys Clothing Product Page
 						<p class="mega space-none"> $29.95</p>
 					</div>
 			</div>
-			<a class="btn-boy micro" href="#"> Buy Now!</a>
+			<a class="btn-boy micro" href="{{site.baseurl}}/cart/"> Buy Now!</a>
 		</div>	
 		
 			<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
@@ -85,7 +85,7 @@ meta: Boys Clothing Product Page
 						<p class="mega space-none"> $29.95</p>
 					</div>
 			</div>
-			<a class="btn-boy micro" href="#"> Buy Now!</a>
+			<a class="btn-boy micro" href="{{site.baseurl}}/cart/"> Buy Now!</a>
 		</div>	
 	</div>
 
