--- a/styleguide/buttons.html
+++ b/styleguide/buttons.html
@@ -20,9 +20,9 @@
 
 <h1> Buttons </h1>
 <h2> Baby boy</h2>
-<a class="btn btn-boy milli" href="#">Click Here!</a>
-<a class="btn btn-boy kilo" href="#">Click Here!</a>
-<a class="btn btn-boy yotta" href="#">Click Here!</a>
+<a class="btn btn-boy milli" href="{{site.baseurl}}/cart/">Click Here!</a>
+<a class="btn btn-boy kilo" href="{{site.baseurl}}/cart/">Click Here!</a>
+<a class="btn btn-boy yotta" href="{{site.baseurl}}/cart/">Click Here!</a>
 
 <h2>Baby girl</h2>
 <a class="btn btn-girl micro" href="#">Click Here!</a>
