made css into an include

--- a/cart.html
+++ b/cart.html
@@ -24,3 +24,7 @@ meta: Affordable and Adorable Clothing for your little monkeys!
 		  <td>3 × 1</td>
 		</tr>
 </table>
+
+<a class="btn-boy micro" href="{{site.baseurl}}/index/">Continue Shopping</a>
+
+<a class="btn-boy micro" href="{{site.baseurl}}/thank-you/">Continue to checkout</a>
