--- a/index.html
+++ b/index.html
@@ -6,24 +6,25 @@ bannertext: SPRING SALE · SAVE UP TO 40% OFF
 showbanner: yes
 ---
 
-<div class="grid grid-promo-large">
-	<div class="unit gutter unit-s-1 unit-m-1 unit-l-1">
-		{% include promo-large.html title="New Spring Pants!" price="Starting from only $15.99" desc="Lorem ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit amet"  image="pants.jpg" %}
-	</div>	
-</div>
+<main role="main">
+	<div class="grid grid-promo-large">
+		<div class="unit gutter unit-s-1 unit-m-1 unit-l-1">
+			{% include promo-large.html title="New Spring Pants!" price="Starting from only $15.99" desc="Lorem ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit ametipsum dolor sit amet"  image="pants.jpg" %}
+		</div>	
+	</div>
 
 
-<div class="grid grid-promo-small">
-	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
-		{% include promo-small.html title="New Boots" desc="Starting from only $15.99" image="boy-boot.jpg" %}
-	</div>	
-	
-	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
-		{% include promo-small.html title="New Boots" desc="Starting from only $15.99" image="boy-boot.jpg" %}
-	</div>	
-	
-	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
-		{% include promo-small.html title="New Boots" desc="Starting from only $15.99" image="boy-boot.jpg" %}
-	</div>		
-</div>
-
+	<div class="grid grid-promo-small">
+		<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
+			{% include promo-small.html title="New Boots" desc="Starting from only $15.99" image="boy-boot.jpg" %}
+		</div>	
+		
+		<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
+			{% include promo-small.html title="New Boots" desc="Starting from only $15.99" image="boy-boot.jpg" %}
+		</div>	
+		
+		<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
+			{% include promo-small.html title="New Boots" desc="Starting from only $15.99" image="boy-boot.jpg" %}
+		</div>		
+	</div>
+</main>
