--- a/thank-you.html
+++ b/thank-you.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1>THANK YOU!</h1>
+<h1 class="zetta">THANK YOU!</h1>
 
-Thank you for your purchase!
+<p class="zetta">Thank you for your purchase!</p>
 
