--- a/grid-boy.html
+++ b/grid-boy.html
@@ -10,7 +10,7 @@ meta: Boys Clothing Product Page
 		<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
 			<div class="media">
 				<div class="media-img media-img-stacked">
-					<img class="img-flex" src="../images/boy-boot.jpg" alt="">	
+					<img class="img-flex" src="../images/t-rex.jpg" alt="">	
 				</div>
 					<div class="media-details">
 						<ul class="list-group">
@@ -37,7 +37,7 @@ meta: Boys Clothing Product Page
 			<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
 			<div class="media">
 				<div class="media-img media-img-stacked">
-					<img class="img-flex" src="../images/boy-boot.jpg" alt="">	
+					<img class="img-flex" src="../images/mom-dad-top.jpg" alt="">	
 				</div>
 					<div class="media-details">
 						<ul class="list-group">
@@ -64,7 +64,7 @@ meta: Boys Clothing Product Page
 			<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
 			<div class="media">
 				<div class="media-img media-img-stacked">
-					<img class="img-flex" src="../images/boy-boot.jpg" alt="">	
+					<img class="img-flex" src="../images/lets-rock.jpg" alt="">	
 				</div>
 					<div class="media-details">
 						<ul class="list-group">
