--- a/grid-girl.html
+++ b/grid-girl.html
@@ -10,7 +10,7 @@ meta: Girls Clothing Product Page
 		<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
 			<div class="media">
 				<div class="media-img media-img-stacked">
-					<img class="img-flex" src="../images/boy-boot.jpg" alt="">	
+					<img class="img-flex" src="../images/pink-monkey.jpg" alt="">	
 				</div>
 					<div class="media-details">
 						<ul class="list-group">
@@ -37,7 +37,7 @@ meta: Girls Clothing Product Page
 			<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
 			<div class="media">
 				<div class="media-img media-img-stacked">
-					<img class="img-flex" src="../images/boy-boot.jpg" alt="">	
+					<img class="img-flex" src="../images/horse.jpg" alt="">	
 				</div>
 					<div class="media-details">
 						<ul class="list-group">
@@ -64,7 +64,7 @@ meta: Girls Clothing Product Page
 			<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
 			<div class="media">
 				<div class="media-img media-img-stacked">
-					<img class="img-flex" src="../images/boy-boot.jpg" alt="">	
+					<img class="img-flex" src="../images/floral.jpg" alt="">	
 				</div>
 					<div class="media-details">
 						<ul class="list-group">
