removed underlines on links

--- a/cart.html
+++ b/cart.html
@@ -25,6 +25,6 @@ meta: Affordable and Adorable Clothing for your little monkeys!
 		</tr>
 </table>
 
-<a class="btn-boy micro" href="{{site.baseurl}}/index/">Continue Shopping</a>
+<a class="btn-boy micro" href="{{site.baseurl}}/index.html">Continue Shopping</a>
 
 <a class="btn-boy micro" href="{{site.baseurl}}/thank-you/">Continue to checkout</a>
