--- a/cart.html
+++ b/cart.html
@@ -18,7 +18,7 @@ meta: Affordable and Adorable Clothing for your little monkeys!
 	  </thead>
 	  <tbody>
 		<tr>
-		  <th class="th th-img"><img class="cart" src="images/jeans.jpg"> </th>
+		  <th class="th th-img"><img class="cart" src="{{site.baseurl}}/images/jeans.jpg"> </th>
 		  <td>1 × 1</td>
 		  <td>2 × 1</td>
 		  <td>3 × 1</td>
