Added Taxes and Grand Total to Cart Page

--- a/cart.html
+++ b/cart.html
@@ -14,15 +14,48 @@ meta: Affordable and Adorable Clothing for your little monkeys!
 		  <h2><th scope="col">Product Name</th></h2>
 		  <h2><th scope="col">Price</th></h2>
 		  <h2><th scope="col">Quantity</th></h2>
+		   <h2><th scope="col">$ TOTAL</th></h2>
 		</tr>
 	  </thead>
 	  <tbody>
 		<tr>
 		  <th class="th th-img"><img class="cart" src="{{site.baseurl}}/images/jeans.jpg"> </th>
-		  <td>1 × 1</td>
-		  <td>2 × 1</td>
-		  <td>3 × 1</td>
+		  <td>Girls Light Wash Loose Fit Jeans</td>
+		  <td>$ 8.00</td>
+		  <td>1</td>
+		  <td>$8.00</td>
 		</tr>
+
+		<tr><th scope> </th>
+			<th scope> </th>
+			<th scope> </th>
+			<th scope> </th>
+			<th scope> Taxes</th>
+		</tr>
+
+
+		<tr><td> </td>
+			<td>  </td>
+			<td> </td>
+			<td> </td>
+			<td> $1.04 </td>
+		</tr>
+
+
+		<tr><th scope> </th>
+			<th scope> </th>
+			<th scope> </th>
+			<th scope> </th>
+			<th scope>Grand Total</th>
+		</tr>
+
+		<tr><td> </td>
+			<td>  </td>
+			<td> </td>
+			<td>  </td>
+			<td> $9.04</td>
+		</tr>
+				
 </table>
 
 <a class="btn-boy micro" href="{{site.baseurl}}/index.html">Continue Shopping</a>
