removed lorem i[sum

--- a/grid-boy.html
+++ b/grid-boy.html
@@ -26,9 +26,9 @@ meta: Boys Clothing Product Page
 								<img src= "http://placehold.it/32x32/8E8E06" alt= "">
 							</li>
 						</ul>
-						<p class="mega space-none"> Product Name</p>
-						<p class="micro">  Lorem ipsum dolor sit amet</p>
-						<p class="mega space-none"> $29.95</p>
+						<p class="mega space-none"> Boys Tee</p>
+						<p class="micro">  New Girls T shirts!</p>
+						<p class="mega space-none"> Only $6 !</p>
 					</div>
 			</div>
 			<a class="btn-boy micro" href="{{site.baseurl}}/cart/"> Buy Now!</a>
@@ -53,9 +53,9 @@ meta: Boys Clothing Product Page
 								<img src= "http://placehold.it/32x32/8E8E06" alt= "">
 							</li>
 						</ul>
-						<p class="mega space-none"> Product Name</p>
-						<p class="micro">  Lorem ipsum dolor sit amet</p>
-						<p class="mega space-none"> $29.95</p>
+						<p class="mega space-none"> Boys Tee</p>
+						<p class="micro">  New Girls T shirts!</p>
+						<p class="mega space-none"> Only $6 !</p>
 					</div>
 			</div>
 			<a class="btn-boy micro" href="{{site.baseurl}}/cart/"> Buy Now!</a>
@@ -80,9 +80,9 @@ meta: Boys Clothing Product Page
 								<img src= "http://placehold.it/32x32/8E8E06" alt= "">
 							</li>
 						</ul>
-						<p class="mega space-none"> Product Name</p>
-						<p class="micro">  Lorem ipsum dolor sit amet</p>
-						<p class="mega space-none"> $29.95</p>
+						<p class="mega space-none"> Boys Tee</p>
+						<p class="micro">  New Girls T shirts!</p>
+						<p class="mega space-none"> Only $6 !</p>
 					</div>
 			</div>
 			<a class="btn-boy micro" href="{{site.baseurl}}/cart/"> Buy Now!</a>
